##
#  CMake script
##

PROJECT(incompressible_navier_stokes)

ADD_SUBDIRECTORY(backward_facing_step)
ADD_SUBDIRECTORY(beltrami)
ADD_SUBDIRECTORY(cavity)
ADD_SUBDIRECTORY(couette)
ADD_SUBDIRECTORY(fda)
ADD_SUBDIRECTORY(flow_past_cylinder)
ADD_SUBDIRECTORY(free_stream)
ADD_SUBDIRECTORY(kelvin_helmholtz)
ADD_SUBDIRECTORY(kovasznay)
ADD_SUBDIRECTORY(orr_sommerfeld)
ADD_SUBDIRECTORY(periodic_hill)
ADD_SUBDIRECTORY(poiseuille)
ADD_SUBDIRECTORY(shear_layer)
ADD_SUBDIRECTORY(stokes_curl_flow)
ADD_SUBDIRECTORY(stokes_guermond)
ADD_SUBDIRECTORY(stokes_shahbazi)
ADD_SUBDIRECTORY(taylor_green_vortex)
ADD_SUBDIRECTORY(template)
ADD_SUBDIRECTORY(template_precursor)
ADD_SUBDIRECTORY(throughput)
ADD_SUBDIRECTORY(tum)
ADD_SUBDIRECTORY(turbulent_channel)
ADD_SUBDIRECTORY(unstable_beltrami)
ADD_SUBDIRECTORY(vortex)
ADD_SUBDIRECTORY(vortex_periodic)