PROJECT(incompressible_navier_stokes)

ADD_SUBDIRECTORY(backward_facing_step)
ADD_SUBDIRECTORY(beltrami)
ADD_SUBDIRECTORY(cavity)
ADD_SUBDIRECTORY(couette)
ADD_SUBDIRECTORY(fda_benchmark)
ADD_SUBDIRECTORY(flow_past_cylinder)
ADD_SUBDIRECTORY(free_stream)
ADD_SUBDIRECTORY(kelvin_helmholtz)
ADD_SUBDIRECTORY(kovasznay)
ADD_SUBDIRECTORY(orr_sommerfeld)
ADD_SUBDIRECTORY(periodic_hill)
ADD_SUBDIRECTORY(poiseuille)
ADD_SUBDIRECTORY(shear_layer)
ADD_SUBDIRECTORY(stokes_manufactured)
ADD_SUBDIRECTORY(taylor_green_vortex)
ADD_SUBDIRECTORY(template)
ADD_SUBDIRECTORY(template_precursor)
ADD_SUBDIRECTORY(throughput)
ADD_SUBDIRECTORY(turbulent_channel)
ADD_SUBDIRECTORY(vortex)